IDC-3362: fix cik_codes generation

--- a/utils/cik_codes/Dockerfile
+++ b/utils/cik_codes/Dockerfile
@@ -4,6 +4,7 @@ RUN apt-get update && \
     apt-get install -y git openssh-client python3 python3-pip
 
 RUN pip3 install openpyxl
+RUN pip3 install ijson
 
 COPY cik_codes.py /cik_codes/
 COPY update_cik_codes.sh /cik_codes/
