--- a/utils/cik_codes/Dockerfile
+++ b/utils/cik_codes/Dockerfile
@@ -5,6 +5,7 @@ RUN apt-get update && \
 
 RUN pip3 install openpyxl
 RUN pip3 install ijson
+RUN pip3 install requests
 
 COPY cik_codes.py /cik_codes/
 COPY update_cik_codes.sh /cik_codes/
