IDC-3362: fix symlisteed cik delivery

--- a/utils/symlistfeed_cik_delivery/Dockerfile
+++ b/utils/symlistfeed_cik_delivery/Dockerfile
@@ -5,6 +5,7 @@ RUN apt-get update && \
 
 RUN pip3 install openpyxl
 
+COPY ../../dictionaries/cik_codes.json /symlistfeed_cik_delivery/
 COPY symlistfeed_cik_delivery.sh /symlistfeed_cik_delivery/
 COPY symlistfeed_cik_delivery.py /symlistfeed_cik_delivery/
 
