IDC-3135: Improved Dockerfile

--- a/utils/adx_data/Dockerfile
+++ b/utils/adx_data/Dockerfile
@@ -3,9 +3,10 @@ FROM ubuntu:24.04
 RUN apt-get update && \
     apt-get install -y git openssh-client curl jq
 
+ARG PATH_TO_SCRIPT=/tmp/expchains/utils/adx_data
 
-COPY update_adx_data.sh /adx_data/
+COPY update_adx_data.sh ${PATH_TO_SCRIPT}/
 
-WORKDIR /adx_data
+WORKDIR ${PATH_TO_SCRIPT}/
 
-RUN chmod +x /adx_data/update_adx_data.sh
+RUN chmod +x ${PATH_TO_SCRIPT}/update_adx_data.sh
