IDC-3135: Changed paths

--- a/utils/adx_data/Dockerfile
+++ b/utils/adx_data/Dockerfile
@@ -1,9 +1,9 @@
 FROM ubuntu:24.04
 
 RUN apt-get update && \
-    apt-get install -y git openssh-client curl jq
+    apt-get install -y --no-install-recommends git openssh-client curl jq
 
-ARG PATH_TO_SCRIPT=/tmp/expchains/utils/adx_data
+ARG PATH_TO_SCRIPT=/var/tmp/expchains/utils/adx_data
 
 COPY update_adx_data.sh ${PATH_TO_SCRIPT}/
 
