IDC-3175: tpex data generation

--- a/utils/taipei_data/Dockerfile
+++ b/utils/taipei_data/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:20.04
 RUN apt-get update && \
     apt-get install -y git openssh-client python3 python3-pip
 
-RUN pip3 install bs4 requests
+RUN pip3 install bs4 requests deepdiff
 
 COPY update_taipei_data.py /taipei_data/
 COPY update_taipei_data.sh /taipei_data/
